# mangadesk

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
plugins/: tsconfig.json
plugins/anisascans/: index.ts  plugin.json
plugins/apcomics/: index.ts  plugin.json
plugins/arenascans/: index.ts  plugin.json
plugins/armageddon/: index.ts  plugin.json
plugins/aryascans/: index.ts  plugin.json
plugins/boratscans/: index.ts  plugin.json
plugins/bunmanga/: index.ts  plugin.json
plugins/comicsland/: index.ts  plugin.json
plugins/cucumbermanga/: index.ts  plugin.json
plugins/decadencescans/: index.ts  plugin.json
plugins/dragontea/: index.ts  plugin.json
plugins/epicmanga/: index.ts  plugin.json
plugins/ero18x/: index.ts  plugin.json
plugins/fablescans/: index.ts  plugin.json
plugins/gakamangas/: index.ts  plugin.json
plugins/galaxydegenscans/: index.ts  plugin.json
plugins/galaxymanga/: index.ts  plugin.json
plugins/gingertoon/: index.ts  plugin.json
plugins/harmonyscan/: index.ts  plugin.json
plugins/mangaka/: index.ts  (+1 more)
repo/: README.md  index.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_tracking.sql  003_features.sql  004_date_added_index.sql
src-tauri/src/: main.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/commands/: cf_proxy.rs  db.rs  fetch.rs  fs.rs  mod.rs
src-tauri/src/downloader/: mod.rs
src-tauri/src/updater/: mod.rs
(+288 files in other folders)
