[package]
name = "mangadesk"
version = "0.2.0"
description = "MangaDesk — lecteur de manga desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
scraper = "0.19"
tokio = { version = "1", features = ["full"] }
# Ajouts par rapport au brief : nécessaires pour implémenter db.rs / l'encodage base64.
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
base64 = "0.22"
# Session 3 — téléchargements, notifications, dialogues, deep link OAuth, export CBZ.
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
# Indispensable au deep link sur Windows/Linux : route l'URL entrante vers
# l'instance déjà lancée (qui détient le code_verifier PKCE) au lieu d'en
# ouvrir une seconde.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
# PKCE OAuth2 (code_verifier aléatoire + code_challenge SHA-256).
sha2 = "0.10"
rand = "0.8"
# Mise à jour automatique de l'application (télécharge/vérifie/installe les
# releases signées) + relance après installation.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
